--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <link rel="shortcut icon" href="https://r.mobirisesite.com/1625661/assets/images/logo-h_mcy7j9m8-206x206.jpg" type="image/x-icon">
   <meta name="description" content="Lombok Eben Taxisdriver menawarkan pengalaman tur terbaik di Lombok dengan sopir profesional. Harga spesial, pilihan kendaraan berkualitas, dan layanan sewa sopir terpercaya. Jelajahi keindahan Lombok bersama kami.">
   <title>Lombok Eben Taxi driver Organizer</title>
-  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/web/assets/mobirise-icons2/mobirise2.css?rnd=1762498963565">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/bootstrap/css/bootstrap.min.css?rnd=1762498963565">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/dropdown/css/style.css?rnd=1762498963565">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/animatecss/animate.css?rnd=1762498963565">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/socicon/css/styles.css?rnd=1762498963565">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/theme/css/style.css?rnd=1762498963565">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/web/assets/mobirise-icons2/mobirise2.css?rnd=1762868903653">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/bootstrap/css/bootstrap.min.css?rnd=1762868903653">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/dropdown/css/style.css?rnd=1762868903653">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/animatecss/animate.css?rnd=1762868903653">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/socicon/css/styles.css?rnd=1762868903653">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/theme/css/style.css?rnd=1762868903653">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Onest:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Onest:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/css/mbr-additional.css?rnd=1762498963565" type="text/css">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/1625661/assets/css/mbr-additional.css?rnd=1762868903653" type="text/css">
   
   
   
@@ -132,7 +132,17 @@
 </style>
 </head>
 <body>
-
+<div class="container-banner" id="mobirisePromo">
+  <div class="banner align-center">
+    <button type="button" onclick="document.getElementById('mobirisePromo').classList.add('container-banner-closing')" class="btn-close" aria-label="Close" style="position: fixed;top: 16px;right: 16px;"></button>
+    <p class="mbr-text mbr-fonts-style display-7"><a href="https://ai.mobirise.com/" class=""></a></p>
+    <div class="mbr-section-btn">
+    <div class="mbr-section-abuse-report">
+      <a href="mailto:support@mobirise.com?subject=Mobirise Abuse Report slzhscsqbh.mobirisesite.com">Report Abuse</a>
+    </div>
+  </div>
+</div>
+  
   <section data-bs-version="5.1" class="menu menu2 cid-uQARWEkvDE" once="menu" id="menu-5-uQARWEkvDE">
 	
 
@@ -383,7 +393,7 @@
             <p class="mbr-text mbr-fonts-style mb-3 display-7">1. <strong>GILI NANGGU snorkeling
 </strong><br>2. <strong>GILI SUDAK
 </strong><br>&nbsp;<strong>snorkeling and lunch</strong><br>3.&nbsp;<strong>GILI KEDIS swim and sunbathing</strong><br><strong>Icluded:</strong><br><strong>- vehicle + English speaking driver</strong><br><strong>- snorkeling equipment</strong><br><strong>- Gopro under water camera<br></strong><strong>- entrance fee</strong><br><strong>- parking fee<br></strong><strong>- refreshment cold drinks</strong><br><strong>Excluded:</strong><br><strong>- personal expenses</strong><br><strong>-lunch</strong><br><strong>What to bring:</strong><br><strong>- towel&nbsp;</strong><br><strong>- sun cream</strong><br><strong>- enough cash<br></strong><br><strong><br></strong></p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">BOOKING</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking</a></div>
           </div>
         </div>
       </div><div class="item features-image col-12 col-md-6 col-lg-3">
@@ -405,7 +415,7 @@
 <br>- mini van 
 <br>- entrance fee<br>- ticket and local guide<br>- refreshment cold drink&nbsp;<br>excluded:
 <br>- personal expenses<br>- lunch<br>what to bring&nbsp;<br>- Towel<br>- enough cash&nbsp;</p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">booking</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking</a></div>
           </div>
         </div>
       </div><div class="item features-image col-12 col-md-6 col-lg-3">
@@ -440,7 +450,7 @@
 <br>what to bring 
 <br>- Towel
 <br>- enough cash</p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">BOOKING</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking</a></div>
           </div>
         </div>
       </div><div class="item features-image col-12 col-md-6 col-lg-3 active">
@@ -468,7 +478,7 @@
 <br>- parking fee
 <br>excluded :<br>- personal expenses
 <br>- lunch <br>- donation.</p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-1">Booking</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking</a></div>
           </div>
         </div>
       </div><div class="item features-image col-12 col-md-6 col-lg-3 active">
@@ -488,7 +498,7 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
 <br>- parking fee
 <br>excluded :<br>- personal expenses
 <br>- lunch <br>- donation.</p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-1">Booking</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking</a></div>
           </div>
         </div>
       </div><div class="item features-image col-12 col-md-6 col-lg-3 active">
@@ -507,7 +517,7 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
 <br>- parking fee
 <br>excluded :<br>- personal expenses
 <br>- lunch <br>- donation.</p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-1">Booking</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking</a></div>
           </div>
         </div>
       </div><div class="item features-image col-12 col-md-6 col-lg-3 active">
@@ -524,7 +534,7 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
 <br>- parking fee
 <br>excluded :<br>- personal expenses
 <br>- lunch <br>- donation.</p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-1">Booking</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking</a></div>
           </div>
         </div>
       </div>
@@ -556,7 +566,7 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
             <h5 class="item-title mbr-fonts-style display-5"><strong>Toyota AGYA</strong></h5>
             <h6 class="item-subtitle mbr-fonts-style display-7">START FROM USD $ 25/ DAY</h6>
             <p class="mbr-text mbr-fonts-style display-7">1. Vehicle Type: Hatchback (5-seater).<br><br>2. Engine: 1.2L 4-cylinder petrol, ~88 hp.<br><br>3. Transmission: 5-speed manual or CVT automatic.<br><br>4. Drive System: Front-wheel drive (FWD).<br><br>5. Seating Capacity &amp; Comfort: 5 seats, compact but efficient for city rides.<br><br>6. Interior Features: Basic infotainment system, air conditioning, USB ports.<br><br>7. Safety: Dual airbags, ABS, seatbelt reminder.<br><br>8. Dimensions: Length ~3,660 mm, Ground clearance ~180 mm.<br><br>9. Fuel Tank &amp; Efficiency: 33 liters, ~16–20 km/l.<br><br>10. Business Travel Advantage: Low operational cost, perfect for short city trips, budget airport transfers, and fuel efficiency.</p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">BOOKING</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking</a></div>
           </div>
         </div>
       </div>
@@ -582,7 +592,7 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
             <h6 class="item-subtitle mbr-fonts-style display-7">START FROM USD $ 35/ DAY</h6>
             <p class="mbr-text mbr-fonts-style display-7">1. Vehicle Type: SUV-inspired MPV (7-seater).<br><br>2. Engine: 1.5L petrol engine, ~104 hp.<br><br>3. Transmission: 5-speed manual or 4-speed automatic.<br><br>4. Drive System: Rear-wheel drive (RWD).<br><br>5. Seating Capacity &amp; Comfort: 7 seats, high ground clearance for rough roads.<br><br>6. Interior Features: Touchscreen, 6 speakers, rear AC.<br><br>7.&nbsp; Safety: 6 airbags, ABS, Hill Start Assist, Vehicle Stability Control.<br><br>8. Dimensions: Length ~4,435 mm, Ground clearance ~220 mm.<br><br>9. Fuel Tank &amp; Efficiency: 45 liters, ~12–14 km/l.<br><br>10. Business Travel Advantage: Stylish yet affordable, good for urban and semi-off-road tours.
             </p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">BOOKING</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking</a></div>
           </div>
         </div>
       </div><div class="item features-image col-12 col-md-6 col-lg-4">
@@ -606,7 +616,7 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
             <h5 class="item-title mbr-fonts-style display-5"><strong>Toyota Fortuner</strong></h5>
             <h6 class="item-subtitle mbr-fonts-style display-7">START FROM USD $ 75/ DAY<br><br></h6>
             <p class="mbr-text mbr-fonts-style display-7">1. Vehicle Type: SUV (7-seater).<br><br>2. Engine: 2.7L petrol (163 hp) or 2.8L turbo-diesel (201 hp).<br><br>3. Transmission: 6-speed manual or 6-speed automatic.<br><br>4. Drive System: 4x2 (RWD) or 4x4 (AWD).<br><br>5. Seating Capacity &amp; Comfort: 7 seats, leather option, spacious cabin.<br><br>6. Interior Features: Touchscreen, Apple CarPlay/Android Auto, rear AC, multiple charging ports.<br><br>7. Safety: ABS, VSC, Hill Assist, airbags, rear camera.<br><br>8. Fuel Tank &amp; Efficiency: 80 liters, ~10–13 km/l.<br><br>9. Business Travel Advantage: Premium SUV, suitable for executive tours, family trips, and adventure destinations.</p>
-            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-4">BOOKING&nbsp;</a></div>
+            <div class="mbr-section-btn item-footer"><a href="https://wa.me/6287855953448" class="btn item-btn btn-primary display-7">Booking&nbsp;</a></div>
           </div>
 
         </div>
@@ -676,7 +686,7 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="GKeOr6xqYKn9ZSTxNIik14H3ZFQKKG1Pg/tVVyHUEibKOHHfr9x5jxlKMG0x7BA1nLrddZgDMWOnMsm5SRhqvFWsvqXLY5OM6eJEZ0uPM+V+NDSA1ZCHYf/knMh04VGh">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="69/CMM9Swk0C4UwnG0YpBnaCMBoOo6pJGsQu0F+bdU75Tx1Q/SCUZn8Fy3/UWYUiTt5lOwj3aWwkZjQWbb+Md/sdKZQ37wSrG0RCCe7c15+grT1XZeKz4R61IpPLTuLQ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -685,13 +695,13 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
                     </div>
                     <div class="dragArea row">
                         <div class="col-md col-sm-12 form-group mb-3" data-for="name">
-                            <input type="text" name="name" placeholder="LETDO DRIVER " data-form-field="name" class="form-control" value="" id="name-contact-form-2-uQARWEljf7">
+                            <input type="text" name="name" data-form-field="name" class="form-control" value="" placeholder="Name" id="name-contact-form-2-uQARWEljf7">
                         </div>
                         <div class="col-md col-sm-12 form-group mb-3" data-for="email">
-                            <input type="email" name="email" placeholder="EBENHARHARA@YAHOO.COM" data-form-field="email" class="form-control" value="" id="email-contact-form-2-uQARWEljf7">
+                            <input type="email" name="email" data-form-field="email" class="form-control" value="" placeholder="Email" id="email-contact-form-2-uQARWEljf7">
                         </div>
                         <div class="col-12 form-group mb-3" data-for="textarea">
-                            <textarea name="textarea" placeholder="Pesan" data-form-field="textarea" class="form-control" id="textarea-contact-form-2-uQARWEljf7"></textarea>
+                            <textarea name="textarea" data-form-field="textarea" class="form-control" placeholder="Messages" id="textarea-contact-form-2-uQARWEljf7"></textarea>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary display-7">Send</button></div>
                     </div>
@@ -711,9 +721,9 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
         <div class="col-12 col-md-12">
           <h5 class="mbr-section-title mbr-fonts-style mt-0 mb-4 display-2"><strong>Contact</strong></h5>
           <p class="mbr-section-subtitle mbr-fonts-style mt-0 mb-4 display-7">
-            Telepon: +62 878-5595-3448
-            <br>Email:Ebenharhara@yahoo.com
-            <br>Alamat: Jln Baruna Santi II Tanah Embet Batulayar
+            Whatsapp : <a href="https://wa.me/6287855953448" class="text-primary">+62 878-5595-3448</a>
+            <br>Email:&nbsp;<a href="mailto:sumerthainengah512@gmail.com" class="text-primary">sumerthainengah512@gmail.com</a>
+            <br>Alamat : Jln Baruna Santi II Tanah Embet Batulayar
             <br>Jam Kerja: Senin - Jumat, 09:00 - 17:00
           </p> 
 
@@ -780,13 +790,13 @@ Located at the foot of Mount Rinjani, this stunning waterfall is easily accessib
 </section>
 
 
-  <script src="https://r.mobirisesite.com/1625661/assets/web/assets/jquery/jquery.min.js?rnd=1762498963565"></script>
-  <script src="https://r.mobirisesite.com/1625661/assets/bootstrap/js/bootstrap.bundle.min.js?rnd=1762498963565"></script>
-  <script src="https://r.mobirisesite.com/1625661/assets/smoothscroll/smooth-scroll.js?rnd=1762498963565"></script>
-  <script src="https://r.mobirisesite.com/1625661/assets/ytplayer/index.js?rnd=1762498963565"></script>
-  <script src="https://r.mobirisesite.com/1625661/assets/dropdown/js/navbar-dropdown.js?rnd=1762498963565"></script>
-  <script src="https://r.mobirisesite.com/1625661/assets/theme/js/script.js?rnd=1762498963566"></script>
-  <script src="https://r.mobirisesite.com/1625661/assets/formoid/formoid.min.js?rnd=1762498963566"></script>
+  <script src="https://r.mobirisesite.com/1625661/assets/web/assets/jquery/jquery.min.js?rnd=1762868903653"></script>
+  <script src="https://r.mobirisesite.com/1625661/assets/bootstrap/js/bootstrap.bundle.min.js?rnd=1762868903653"></script>
+  <script src="https://r.mobirisesite.com/1625661/assets/smoothscroll/smooth-scroll.js?rnd=1762868903653"></script>
+  <script src="https://r.mobirisesite.com/1625661/assets/ytplayer/index.js?rnd=1762868903653"></script>
+  <script src="https://r.mobirisesite.com/1625661/assets/dropdown/js/navbar-dropdown.js?rnd=1762868903653"></script>
+  <script src="https://r.mobirisesite.com/1625661/assets/theme/js/script.js?rnd=1762868903653"></script>
+  <script src="https://r.mobirisesite.com/1625661/assets/formoid/formoid.min.js?rnd=1762868903653"></script>
   
   
   
