--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="https://r.mobirisesite.com/1625661/assets/images/logo-h_mcy7j9m8-206x206.jpg" type="image/x-icon">
   <meta name="description" content="Lombok Eben Taxisdriver menawarkan pengalaman tur terbaik di Lombok dengan sopir profesional. Harga spesial, pilihan kendaraan berkualitas, dan layanan sewa sopir terpercaya. Jelajahi keindahan Lombok bersama kami.">
-  <meta name="google-site-verification" content="googlea0e988a8d8ccc81b" />
+  <meta name="google-site-verification" content="googlea0e988a8d8ccc81b.html" />
 
   
   <title>Lombok Eben Taxi driver Organizer</title>
